name:                steak
version:             1.0
homepage:            https://github.com/NiceKingWei/steak
license:             MIT
license-file:        LICENSE
author:              Long Jinwei
maintainer:          nicekingwei@sina.com
copyright:           2017 Long Jinwei
build-type:          Simple
extra-source-files:  Readme.md
cabal-version:       >=1.20

executable steak
  hs-source-dirs:      src
  main-is:             compiler.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5,
                       bytestring >= 0.10.8.1,
                       transformers >= 0.5.2.0,
                       parsec>=3.1.11,
                       filepath>=1.4.1.2,
                       directory>=1.3.0.0
  default-language:    Haskell2010